--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1",
     "@truffle/hdwallet-provider": "^2.1.3",
     "bluebird": "^3.5.5",
     "chai": "4.2.0",
     "chai-as-promised": "^7.1.1",
     "commander": "^3.0.1",
+    "dotenv": "^16.0.3",
     "ganache-cli": "^6.8.0-istanbul.0",
     "nunjucks": "^3.2.0",
     "openzeppelin-solidity": "2.2.0",
     "solidity-rlp": "^2.0.0",
     "truffle": "^5.0.34",
-    "web3": "^1.2.4",
-    "dotenv": "^16.0.3"
+    "web3": "^1.2.4"
   }
 }
